# HotConfig

./: CMakeLists.txt  README.md
include/: hot_config.h  thread_pool.h
unittest/: CMakeLists.txt  hot_config_unittest.cpp
